--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   wave: ^0.2.2
+  bip39: ^1.0.6
+  hex: ^0.2.0
+  ed25519_hd_key: ^2.2.1
+  web3dart: ^2.7.2
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
